--- a/css/intro.css
+++ b/css/intro.css
@@ -69,3 +69,17 @@ body {
 .content-hidden .fly-in-text li:nth-child(4) { transform: translate3d(40px, 0, 0); }
 .content-hidden .fly-in-text li:nth-child(5) { transform: translate3d(90px, 0, 0); }
 .content-hidden .enter-button { opacity: 0; transform: translate3d(0, -50px, 0); }
+
+
+
+
+@media (max-width: 400px) 
+{
+    .fly-in-text li {
+        font-size: 2em;
+    }
+
+    .enter-button {
+        font-size: 1em;
+    }
+}
