--- a/css/page4.css
+++ b/css/page4.css
@@ -546,6 +546,7 @@ h1 {
     #map {
         width: 80%;
         margin: 0 auto;
+        margin-bottom: 100px;
     }
 
     .social {
@@ -678,3 +679,36 @@ h1 {
     }
 }
 
+@media (max-width: 480px)
+{
+    #wh {
+        font-size: 20px;
+    }
+
+    .social {
+        /* margin: 0 40px; */
+        top: 10px;
+        left: 7cm;
+    }
+
+    .social li:nth-child(1) {
+        top: -49px;
+        left: 248px;
+    }
+    .social li:nth-child(2) {
+        top: -10px;
+        left: 20px;
+    }
+    .social li:nth-child(3) {
+        top: 1px;
+        left: 0px;
+    }
+    .social li:nth-child(4) {
+        top: 40px;
+        left: -228px;
+    }
+    .social li:nth-child(5) {
+        top: 43px;
+        left: -510px;
+    }
+}
