--- a/css/home.css
+++ b/css/home.css
@@ -7,9 +7,9 @@ body {
 /* ------------------------------- DRAGGABLE BUTTON -------------------------------- */
 
 .share {
-    position: relative;
-    top: 80px;
-    left: 651px;
+    position: fixed;
+    top: 50%;
+    right: 3%;
     transform: rotate(45deg) ;
     width: 50px;
     height: 50px;
@@ -718,7 +718,7 @@ h1 {
     .social {
         margin: 0px;
         top: 10px;
-        left: -9em;
+        left: -8em;
         width: 0px;
     }
 
