--- a/css/about_me.css
+++ b/css/about_me.css
@@ -41,7 +41,7 @@ body {
 }
 
 .toggle::before {
-    content: '\f1e0';
+    content: '\f015';
     font-family: fontAwesome;
     position: absolute;
     top: 0;
